Fixing style for share buttons on smaller screents

--- a/public/stylesheets/less/layout/layout-articles.less
+++ b/public/stylesheets/less/layout/layout-articles.less
@@ -46,10 +46,10 @@
 
 .p-share{
     padding:0 2em;
-    margin-left:50%;
     .s-copy{
         float:left;
         margin-right:0.5em;
+        color:@col-babyblue;
     }
     ul{
         list-style:none;
@@ -60,5 +60,6 @@
         padding:0;
         margin-right:0.5em;
         text-transform:uppercase;
+        text-decoration: underline;
     }
 }
