--- a/public/stylesheets/less/responsive/breakpt-3.less
+++ b/public/stylesheets/less/responsive/breakpt-3.less
@@ -49,6 +49,9 @@
     display:block;
 }
 
+.p-share{
+    padding:0 0.5em;
+}
 .p-comments{
     font-size:1em;
     padding:0 1em 1em 1em;
